loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:3: error: Int does not take parameters
  avance()}
        ^