loopdowhile.Poucet1.scala.code
var nbBaggle = 0
do{ for (avance <- 1 to 5) {
  avance()}
  } while (sortieTrouvee == false)
  	for (pas <- 1 to 5){
   	 avance()
      if (estSurBiscuit == true ){
        nbBaggle += 1
      }
  	}
  	if (nbBaggle <= 2){
    	droite()
  	}
  	if (nbBaggle >= 3){
    	gauche()
  	}
	